--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,10 @@
 @tailwind utilities;
 
 body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  scroll-behavior: smooth;
   font-family: "Cormorant Garamond", serif;
 }
 
