--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,3 +39,24 @@ body {
 .gap-7 {
   @apply gap-[7px];
 }
+
+.bg-overlay {
+  position: relative;
+  z-index: 0;
+}
+
+.bg-overlay::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark background */
+  z-index: 1;
+  transition: background-color 0.3s ease;
+}
+
+body {
+  transition: background-color 0.3s ease;
+}
